<resources>
    <string name="app_name">Application Tracker</string>
    <string name="donateTitle">Welcome Homer</string>
    <string name="donateSubtitle">Please Give Generously</string>
    <string name="donateButton">Donate</string>
    <string name="paypal">PayPal</string>
    <string name="direct">Direct</string>
    <string name="amount">Amount</string>
    <string name="total">Total so Far</string>
    <string name="totalSoFar">$ %1$d</string>
    <string name="reportTitle">Donations Report</string>
    <string name="defaultAmount">00</string>
    <string name="defaultMethod">N/A</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="action_add_application">Add College Application</string>
    <string name="action_application_list">Application list</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>

    <string name="select_profile_image">Select Profile Image</string>

    <string name="action_profile">Profile</string>
    <string name="action_send">Send</string>
    <string name="group_settings">Settings</string>

    <string name="nav_header_title">College Application Tracker</string>
    <string name="nav_header_subtitle">subtitle</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="action_about">About Us</string>
    <string name="aboutus_title">Homer for President !!</string>
    <string name="aboutus_message">Hi, I\'m Homer\n\nPlease vote for me.\n\n Please Please Please Please!!</string>
    <string name="collegeNotFound">No Colleges added Yet…\n!</string>
    <string name="applicationNotFound">No Applications added Yet…\n!</string>
    <string name="donationError">Error : Couldn\'t Make a Donation…</string>
    <string name="donationDetails">Donation Details</string>
<string name="description">The College Application Tracker is a useful tool for high school students and their families as they navigate the college application process. With this app, users can easily keep track of the colleges they are interested in, including important details like application deadlines and requirements. The app also allows users to create a checklist for each college application, ensuring that nothing is forgotten or overlooked during the application process. With its intuitive interface and helpful features, the College Application Tracker is a must-have app for anyone applying to college.</string>
    <string name="contact">Contact</string>
    <string name="information">Information</string>
    <string name="amt">Amount :</string>
    <string name="payment">Payment :</string>
    <string name="message">Message :</string>
    <string name="upvotes">UpVotes :</string>

    <string name="messageLoading">Please Wait...</string>

    <!-- START Firebase Resources-->

    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="send_link">Send Link</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Please Login Below</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">login</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>